@@ -27,6 +27,7 @@ t/children.t
 t/clonei.t
 t/construct_tree.t
 t/doctype.t
+t/encoding.t
 t/escape.t
 t/leaktest.t
 t/oldparse.html
